--- a/2026/January/2026-01-25.md
+++ b/2026/January/2026-01-25.md
@@ -1,37 +1,39 @@
-# Tech Innovation Log — Week Ending 25 Jan 2026
+# Tech Innovation Log — Week Ending 25th Jan 2026
 
 ## Major Headlines
-- Elon Musk files a lawsuit seeking $79B–$134B in damages from OpenAI and Microsoft, alleging OpenAI abandoned its nonprofit mission.
-- Sequoia plans a major investment in Anthropic as part of a funding round targeting more than $25B.
-- Micron breaks ground on a New York memory manufacturing complex, set to become the largest semiconductor facility in the US.
-- Micron signs a $1.8B agreement to acquire a fabrication site in Taiwan to expand DRAM production.
-- The EU plans cybersecurity rules expected to phase out high-risk vendors such as Huawei from critical infrastructure.
-- OpenAI rolls out age prediction globally on ChatGPT to apply automatic protections for users under 18.
-- OpenAI plans to test ads below ChatGPT replies for free and Go-tier users, targeting billions in revenue by 2026.
-- Google launches Personal Intelligence, a Gemini feature that connects with Gmail, Photos, Search, and YouTube to deliver personalized AI responses.
-- Meta confirms layoffs in Reality Labs and shifts investment toward wearables.
-- Meta plans to significantly expand Ray-Ban Meta smart glasses production capacity by 2026.
-- Apple signs a multiyear deal with Google to use Gemini models and Google Cloud to power future Siri and Apple Intelligence features.
-- Apple is reportedly developing an AI wearable pin with cameras and microphones, potentially launching as early as 2027.
-- Apple plans to revamp Siri into a full AI chatbot in iOS 27 and macOS 27, powered by Google’s Gemini.
-- Alphabet reaches a $4T market capitalization amid rising investor confidence.
-- Nvidia H200 chip shipments are reportedly delayed after Chinese customs blocked AI processor imports.
-- Data centers are expected to consume over 70% of global high-end memory chip output in 2026.
-- South Korea enacts the AI Basic Act, introducing one of the world’s first comprehensive AI regulatory frameworks.
-- TikTok says ByteDance sold a majority stake in its US operations to a group of non-Chinese investors.
-- Waymo launches its robotaxi service in Miami, expanding to its sixth market.
-- Tesla launches robotaxi rides in Austin with no human safety driver.
-- The NYSE plans to enable real-time trading and on-chain settlement of tokenized securities in 2026.
-- Ukraine plans to share wartime drone and combat data with allies to help train AI military models.
-- X open sources its core recommendation system, stating it is powered by a Grok-based transformer model.
+
+* Elon Musk files a lawsuit seeking $79B–$134B in damages from OpenAI and Microsoft, alleging OpenAI abandoned its nonprofit mission.
+* Sequoia plans a major investment in Anthropic as part of a funding round targeting more than $25B.
+* Micron breaks ground on a New York memory manufacturing complex, set to become the largest semiconductor facility in the US.
+* Micron signs a $1.8B agreement to acquire a fabrication site in Taiwan to expand DRAM production.
+* The EU plans cybersecurity rules expected to phase out high-risk vendors such as Huawei from critical infrastructure.
+* OpenAI rolls out age prediction globally on ChatGPT to apply automatic protections for users under 18.
+* OpenAI plans to test ads below ChatGPT replies for free and Go-tier users, targeting billions in revenue by 2026.
+* Google launches Personal Intelligence, a Gemini feature that connects with Gmail, Photos, Search, and YouTube to deliver personalized AI responses.
+* Meta confirms layoffs in Reality Labs and shifts investment toward wearables.
+* Meta plans to significantly expand Ray-Ban Meta smart glasses production capacity by 2026.
+* Apple signs a multiyear deal with Google to use Gemini models and Google Cloud to power future Siri and Apple Intelligence features.
+* Apple is reportedly developing an AI wearable pin with cameras and microphones, potentially launching as early as 2027.
+* Apple plans to revamp Siri into a full AI chatbot in iOS 27 and macOS 27, powered by Google’s Gemini.
+* Alphabet reaches a $4T market capitalization amid rising investor confidence.
+* Nvidia H200 chip shipments are reportedly delayed after Chinese customs blocked AI processor imports.
+* Data centers are expected to consume over 70% of global high-end memory chip output in 2026.
+* South Korea enacts the AI Basic Act, introducing one of the world’s first comprehensive AI regulatory frameworks.
+* TikTok says ByteDance sold a majority stake in its US operations to a group of non-Chinese investors.
+* Waymo launches its robotaxi service in Miami, expanding to its sixth market.
+* Tesla launches robotaxi rides in Austin with no human safety driver.
+* The NYSE plans to enable real-time trading and on-chain settlement of tokenized securities in 2026.
+* Ukraine plans to share wartime drone and combat data with allies to help train AI military models.
+* X open sources its core recommendation system, stating it is powered by a Grok-based transformer model.
 
 ## Minor / Emerging Headlines
-- Similarweb reports Threads surpassed X in mobile daily active users, while X continues to lead on the web.
-- Claude’s web usage more than doubled year-over-year, driven by increased adoption among developers.
-- OpenAI’s compute usage grew nearly tenfold from 2023 to 2025 as revenue surpassed $20B annually.
-- RunPod reports a $120M annual revenue run rate from AI infrastructure services.
-- Anthropic overhauls Claude’s “constitution” to emphasize general principles over rigid rules.
-- China expands its public registry requirement for AI algorithms, mapping its domestic AI ecosystem.
-- Global data center expansion accelerates amid shortages of skilled labor and power infrastructure.
-- Venture funding remains strong for AI infrastructure, robotics, and semiconductor startups.
-- The World Economic Forum highlights AI-driven job displacement, AI governance, and chip geopolitics as dominant themes.
+
+* Similarweb reports Threads surpassed X in mobile daily active users, while X continues to lead on the web.
+* Claude’s web usage more than doubled year-over-year, driven by increased adoption among developers.
+* OpenAI’s compute usage grew nearly tenfold from 2023 to 2025 as revenue surpassed $20B annually.
+* RunPod reports a $120M annual revenue run rate from AI infrastructure services.
+* Anthropic overhauls Claude’s “constitution” to emphasize general principles over rigid rules.
+* China expands its public registry requirement for AI algorithms, mapping its domestic AI ecosystem.
+* Global data center expansion accelerates amid shortages of skilled labor and power infrastructure.
+* Venture funding remains strong for AI infrastructure, robotics, and semiconductor startups.
+* The World Economic Forum highlights AI-driven job displacement, AI governance, and chip geopolitics as dominant themes.
