--- a/2026/02.February/2026-02-01.md
+++ b/2026/02.February/2026-02-01.md
@@ -1,30 +1,35 @@
 # Tech Innovation Log — Week Ending 1 Feb 2026
 
 ## Major Headlines
-- TikTok updates its US privacy policy as part of its ownership transition, enabling precise location tracking.
-- The EU opens a formal Digital Services Act investigation into xAI over Grok generating sexualized images of women and children.
-- Microsoft unveils Maia 200, its second-generation AI accelerator built on TSMC’s 3nm process, now deployed in Azure.
-- Apple prepares a major AI strategy reset, planning a Gemini-powered personalized Siri and a chatbot-style Siri later in 2026.
-- Apple acquires Q.ai in a deal reportedly valued at around $2B, expanding its multimodal and non-verbal AI capabilities.
-- Apple reports Q1 revenue up 16% YoY to $143.8B, driven by strong iPhone sales and record growth in China.
-- Meta reports Q4 revenue up 24% YoY and projects up to $135B in capital expenditures for AI and superintelligence efforts in 2026.
-- Microsoft reports Q2 revenue up 17% YoY, with Azure revenue growing 39% and cloud backlog surpassing $625B.
-- Amazon announces plans to cut ~16,000 corporate roles as part of organizational restructuring.
-- Nvidia invests an additional $2B in CoreWeave to expand AI compute capacity beyond 5GW by 2030.
-- OpenAI launches Prism, a free cloud-based LaTeX editor powered by GPT-5.2 for scientific research.
-- Chinese startup Moonshot releases Kimi K2.5, an open-source multimodal agentic AI model.
-- Google launches Project Genie, enabling users to create interactive AI-generated worlds.
-- IonQ acquires semiconductor manufacturer SkyWater for ~$1.8B, marking its largest acquisition.
-- Tesla agrees to invest $2B in xAI as part of xAI’s Series E funding round.
-- SpaceX and xAI explore a potential merger ahead of a planned IPO.
-- Samsung and SK Hynix report strong earnings driven by AI-related memory demand, forecasting shortages through 2027.
-- Regulators clarify that tokenized stocks fall under existing securities laws.
-- Waymo expands robotaxi operations but faces renewed scrutiny after a pedestrian incident.
+
+* TikTok updates its US privacy policy as part of its ownership transition, enabling precise location tracking.
+* The EU opens a formal Digital Services Act investigation into xAI over Grok generating sexualized images of women and children.
+* Microsoft unveils Maia 200, its second-generation AI accelerator built on TSMC’s 3nm process, now deployed in Azure.
+* Apple prepares a major AI strategy reset, planning a Gemini-powered personalized Siri and a chatbot-style Siri later in 2026.
+* Apple acquires Q.ai in a deal reportedly valued at around $2B, expanding its multimodal and non-verbal AI capabilities.
+* Apple reports Q1 revenue up 16% YoY to $143.8B, driven by strong iPhone sales and record growth in China.
+* Meta reports Q4 revenue up 24% YoY and projects up to $135B in capital expenditures for AI and superintelligence efforts in 2026.
+* Microsoft reports Q2 revenue up 17% YoY, with Azure revenue growing 39% and cloud backlog surpassing $625B.
+* Amazon announces plans to cut ~16,000 corporate roles as part of organizational restructuring.
+* Nvidia invests an additional $2B in CoreWeave to expand AI compute capacity beyond 5GW by 2030.
+* OpenAI launches Prism, a free cloud-based LaTeX editor powered by GPT-5.2 for scientific research.
+* Chinese startup Moonshot releases Kimi K2.5, an open-source multimodal agentic AI model.
+* Google launches Project Genie, enabling users to create interactive AI-generated worlds.
+* IonQ acquires semiconductor manufacturer SkyWater for ~$1.8B, marking its largest acquisition.
+* Tesla agrees to invest $2B in xAI as part of xAI’s Series E funding round.
+* SpaceX and xAI explore a potential merger ahead of a planned IPO.
+* Samsung and SK Hynix report strong earnings driven by AI-related memory demand, forecasting shortages through 2027.
+* Regulators clarify that tokenized stocks fall under existing securities laws.
+* Waymo expands robotaxi operations but faces renewed scrutiny after a pedestrian incident.
 
 ## Minor / Emerging Headlines
-- AI assistants see rapid growth in professional, scientific, and enterprise use cases.
-- Data center expansion accelerates amid power, water, and labor constraints.
-- Governments increase scrutiny of AI safety, content moderation, and platform accountability.
-- Venture funding remains strong for AI infrastructure, robotics, autonomous vehicles, and semiconductor startups.
-- Social platforms experiment with AI agents, synthetic personas, and new monetization models.
-- AI-driven productivity tools continue reshaping software development, healthcare, and enterprise workflows.
+
+* AI assistants see rapid growth in professional, scientific, and enterprise use cases.
+* Data center expansion accelerates amid power, water, and labor constraints.
+* Governments increase scrutiny of AI safety, content moderation, and platform accountability.
+* Venture funding remains strong for AI infrastructure, robotics, autonomous vehicles, and semiconductor startups.
+* Social platforms experiment with AI agents, synthetic personas, and new monetization models.
+* AI-driven productivity tools continue reshaping software development, healthcare, and enterprise workflows.
+
+
+
